add tor egress firewall solution

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -30,6 +30,9 @@ tor_metrics: false
 tor_bridge_distribution: ""
 snowflake_proxies: []
 tor_port: 0
+# egress firewall
+tor_egress_drop: ""
+tor_egress_slew: ""
 
 # nginx
 nginx_public_site: false
