install Tor build tools only on demand

--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -46,7 +46,7 @@
         - tor-dist
 
     - name: Tools
-      when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+      when: tor_build_from_source and ansible_facts.distribution in ('Debian', 'Ubuntu')
       ansible.builtin.import_tasks: tools.yaml
       tags:
         - tools
