--- a/playbooks/roles/setup_common/tasks/firewall-tor.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall-tor.yaml
@@ -107,7 +107,7 @@
 - name: Egress
   when: tor_bridge_distribution == ''
   block:
-    - name: Download egress solution
+    - name: Download egress firewall solution
       throttle: 16
       ansible.builtin.get_url:
         url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
@@ -116,7 +116,7 @@
         - ipv4-rules-egress.sh
       register: _egress_script
 
-    - name: Create egress fw cron job for reboot
+    - name: Create egress firewall cron job for reboot
       vars:
       ansible.builtin.cron:
         name: start firewall egress
@@ -125,7 +125,7 @@
           {{ tor_egress_slew }} /root/ipv4-rules-egress.sh start
       register: _egress_cron
 
-    - name: Ensure that egress fw is up to date and active
+    - name: Update egress firewall
       changed_when: true
       when: _egress_script.changed or _egress_cron.changed
       ansible.builtin.shell:
