--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,8 +14,6 @@ fact_caching_connection = ./.ansible_facts
 
 remote_user = root
 
-ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=80s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
-
 # overwrite: ANSIBLE_DISPLAY_OK_HOSTS=true
 display_ok_hosts = false
 
@@ -31,3 +29,6 @@ display_skipped_hosts = false
 
 # no log or it clashes with Ansible tasks grep'ing the syslog
 no_target_syslog = true
+
+[ssh_connection]
+ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=80s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
