--- a/ansible.cfg
+++ b/ansible.cfg
@@ -27,7 +27,7 @@ display_skipped_hosts = false
 # timer stats for debug/profiling
 # callbacks_enabled=ansible.posix.profile_tasks
 
-# no log or it clashes with Ansible tasks grep'ing the syslog
+# no log, b/c it would clash with an attempt to grep the syslog
 no_target_syslog = true
 
 [ssh_connection]
