--- a/playbooks/roles/info_healthy/tasks/trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/trace.yaml
@@ -1,18 +1,16 @@
 ---
 - name: Get trace from system log
   changed_when: false
+  failed_when: false
   ansible.builtin.shell:
     cmd: |-
       journalctl --since "{{ trace_since }}" --quiet |
         grep -F -B 1 -A 1 -e ' kernel: ------------[ cut here ]------------' |
-        head -n 1
+        grep -e ' .*/.*\\.[ch]:[0-9]+'
     executable: /bin/bash
-  register: _result
+  register: _code_lines
   notify: Not Healthy
 
 - name: Results of trace
-  vars:
-    _codeline: "{{ _result.stdout_lines | join('\n') | split(' ') | select('match', '.*/.*\\.[ch]:[0-9]+') | first }}"
-    _headline: "{{ _result.stdout[0] }}"
   ansible.builtin.include_tasks: _trace.yaml
-  loop: "{{ _result.stdout_lines }}"
+  loop: "{{ _code_lines.stdout_lines }}"
