--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -33,13 +33,13 @@
       no_block: true
   block:
     - name: Configure unattended update of Debian
-      when: ansible_facts.distribution in ('Debian')
+      when: ansible_facts.distribution == 'Debian'
       ansible.builtin.import_tasks: autoupdate-debian.yaml
       tags:
         - autoupdate
 
     - name: Enable unattended update
-      when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+      when: ansible_facts.os_family == 'Debian'
       ansible.builtin.import_tasks: autoupdate-apt.yaml
       tags:
         - autoupdate
