--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -31,7 +31,7 @@
   register: _result
 
 - name: Stop and disable fstrim
-  when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+  when: ansible_facts.os_family == 'Debian'
   ansible.builtin.systemd_service:
     name: "{{ item }}"
     state: stopped
@@ -40,7 +40,7 @@
     - fstrim.timer
 
 - name: Stop and disable Ubuntu services
-  when: ansible_facts.distribution in ('Ubuntu')
+  when: ansible_facts.distribution == 'Ubuntu'
   ansible.builtin.systemd_service:
     name: "{{ item }}"
     state: stopped
