--- a/playbooks/roles/setup_common/tasks/upgrade.yaml
+++ b/playbooks/roles/setup_common/tasks/upgrade.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Upgrade system
-  when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+  when: ansible_facts.os_family == 'Debian'
   environment:
     DEBIAN_FRONTEND: noninteractive
   block:
