--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -39,14 +39,14 @@
       mode: "0644"
   block:
     - name: Distribution
-      when: not tor_build_from_source and ansible_facts.distribution in ('Debian')
+      when: not tor_build_from_source and ansible_facts.distribution == 'Debian'
       ansible.builtin.import_tasks: tor-dist.yaml
       tags:
         - tor
         - tor-dist
 
     - name: Tools
-      when: tor_build_from_source and ansible_facts.distribution in ('Debian', 'Ubuntu')
+      when: tor_build_from_source and ansible_facts.os_family == 'Debian'
       ansible.builtin.import_tasks: tools.yaml
       tags:
         - tools
