--- a/playbooks/roles/setup_tor/tasks/tools.yaml
+++ b/playbooks/roles/setup_tor/tasks/tools.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install/Update toolchain for Tor build
-  when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+  when: ansible_facts.os_family == 'Debian'
   ansible.builtin.apt:
     name:
       - automake
@@ -17,7 +17,7 @@
       - libseccomp-dev
 
 - name: Install/Update toolchain for Tor build (Ubuntu)
-  when: ansible_facts.distribution in ('Ubuntu')
+  when: ansible_facts.distribution == 'Ubuntu'
   ansible.builtin.apt:
     name:
       - autotools-dev
