--- a/playbooks/roles/snapshot/tasks/main.yaml
+++ b/playbooks/roles/snapshot/tasks/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Flush handlers before shutdown
+- name: Flush handlers (before shutdown)
   ansible.builtin.meta: flush_handlers
 
 - name: Shutdown
