re-factor test logic into an own playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,8 @@ interpreter_python = /usr/bin/python3
 
 inventory = ./inventory
 
-forks = 96
+# 7 tasks per vCPU
+forks = 112
 pipelining = true
 strategy = ansible.builtin.free
 
@@ -20,15 +21,8 @@ display_ok_hosts = false
 # overwrite: ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
 display_skipped_hosts = false
 
-# only stats
-# stdout_callback = ansible.builtin.oneline
-# stdout_callback = community.general.unixy
-
-# timer stats for debug/profiling
-# callbacks_enabled=ansible.posix.profile_tasks
-
-# no log, b/c it would clash with an attempt to grep the syslog
+# no log, b/c it fools the attempt to grep the system log
 no_target_syslog = true
 
 [ssh_connection]
-ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=80s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
+ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=120s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
