--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -188,3 +188,6 @@
       ansible.builtin.import_tasks: reboot.yaml
       tags:
         - reboot
+
+    - name: Flush handlers (common)
+      ansible.builtin.meta: flush_handlers
