--- a/site-grouped.yaml
+++ b/site-grouped.yaml
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- ansible.builtin.import_playbook: playbooks/setup-grouped.yaml
+- ansible.builtin.import_playbook: playbooks/grouped.yaml
