reduce # of plays for test

--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -43,3 +43,6 @@
       ansible.builtin.import_tasks: autoupdate-apt.yaml
       tags:
         - autoupdate
+
+    - name: Flush handlers (autoupdate)
+      ansible.builtin.meta: flush_handlers
