--- a/playbooks/roles/info_common/tasks/log-unattended.yaml
+++ b/playbooks/roles/info_common/tasks/log-unattended.yaml
@@ -3,8 +3,8 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      grep -h -v -e 'Reading database' -e '^$' \
-        /var/log/unattended-upgrades/unattended-upgrades-dpkg.log.1 \
+      zgrep -h -v -e 'Reading database' -e '^$' \
+        /var/log/unattended-upgrades/unattended-upgrades-dpkg.log.1.gz \
         /var/log/unattended-upgrades/unattended-upgrades-dpkg.log 2>/dev/null |
         tail -n 20
   register: _result
