--- a/playbooks/roles/info_common/tasks/log-unattended.yaml
+++ b/playbooks/roles/info_common/tasks/log-unattended.yaml
@@ -4,9 +4,10 @@
   ansible.builtin.shell:
     cmd: |-
       zgrep -h -v -e 'Reading database' -e '^$' \
-        /var/log/unattended-upgrades/unattended-upgrades-dpkg.log.1.gz \
+        /var/log/unattended-upgrades/unattended-upgrades-dpkg.log.1{,.gz} \
         /var/log/unattended-upgrades/unattended-upgrades-dpkg.log 2>/dev/null |
         tail -n 20
+    executable: /bin/bash
   register: _result
 
 - name: Findings of unattended log
