--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -63,3 +63,8 @@
       fi
       swapon /swapfile
     creates: /swapfile
+
+- name: Suppress motd
+  ansible.builtin.file:
+    path: /root/.hushlogin
+    state: touch
