disable exim4 if installed

--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -123,3 +123,24 @@
   ansible.builtin.systemd_service:
     name: sysstat
     state: started
+
+- name: Stop and disable Debian services
+  when: ansible_facts.os_family == 'Debian'
+  failed_when: false
+  ansible.builtin.systemd_service:
+    name: "{{ item }}"
+    state: stopped
+    enabled: false
+  loop:
+    - exim4
+    - fstrim.timer
+
+- name: Stop and disable Ubuntu services
+  when: ansible_facts.distribution == 'Ubuntu'
+  ansible.builtin.systemd_service:
+    name: "{{ item }}"
+    state: stopped
+    enabled: false
+  loop:
+    - multipathd
+    - rsyslog
